# gkc

./: .gitignore  CI_CD_VERIFICATION.md  DATE_TIME_ENHANCEMENT.md  LICENSE  README.md  SITELINKS_IMPLEMENTATION.md  SITELINKS_VALIDATION_IMPLEMENTATION.md  SPARQL_IMPLEMENTATION.md  SPARQL_IMPLEMENTATION_COMPLETE.md  create_labels.sh  mkdocs.yml  pre-merge-output.txt  pyproject.toml  test_integration_sparql.py  test_minimal_form.py
.github/: copilot-instructions.md
docs/: RELEASE.md  SpiritSafe.md  background.md  bottling.md  claims_map_builder.md  date_time_handling.md  distillation.md  distillery_glossary.md  fermentation.md  index.md  mapping_format_migration.md  mash_tun.md  pipeline_overview.md  proofing.md  reference_qualifier_patterns.md  refinement.md  setup.md  sitelinks_usage.md  sitelinks_validation.md  sparql_queries.md  tribes.md
examples/: README.md  README_ITEM_CREATION.md  claims_builder_integration_example.py  csv_to_wikidata_dryrun.ipynb  date_handling_test.py  inline_named_pattern_example.py  item_creation_example.py  mapping_builder_example.py  shex_validation_example.py  sitelinks_example.py  sitelinks_validation_example.py  sparql_query_example.ipynb  sparql_query_example.py  wikidata_auth_example.ipynb  wikidata_auth_example.py
gkc/: __init__.py  auth.py  bottler.py  cli.py  cooperage.py  entity_profile.py  exporter.py  item_creator.py  mapping_builder.py  mash.py  mash_formatters.py  recipe.py  shex.py  shipper.py  sitelinks.py  sparql.py  spirit_safe.py  wd.py
scripts/: pre-merge-check.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  test_auth.py  test_cli.py  test_datatypes.py  test_docs_build.py  test_entity_catalog.py  test_exporter.py  test_init.py  test_mash.py  test_mash_formatters.py  test_profiles_base.py  test_shex.py  (+11 more)
(+193 files in other folders)
